2007-10-22  Mark Evenson  <mark.evenson@gmx.at>

	* swank-abcl.lisp (getpid): Implemented.
	
2007-10-22  R. Matthew Emerson  <rme@thoughtstuff.com>

	* swank-openmcl.lisp (closure-closed-over-values): Use
	CCL::NTH-IMMEDIATE instead of CCL::%SVREF.  This makes it work on
	x86-64 OpenMCL. (The %SVREF worked on PPC, but this will work on
	both.)

2007-09-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-filesystem-toplevel-directory): New function.
	Windows doesn't have a filesystem that is as hierarchical as the
	Unix' one. Reported by Carsten Blaauw and Stefan Kluehspies.
	(slime-file-name-merge-source-root): Use it.
	(slime-highlight-differences-in-dirname): Use it.

2007-09-26  Utz-Uwe Haus  <haus+slime@mail.math.uni-magdeburg.de>

	* swank-allegro.lisp (fspec-definition-locations): Allow the
	POSITION datum of :top-level-form fspecs to be missing.  This
	apparently helpful for Allegro CL 8.1.

2007-09-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-length=, slime-length>): Restore support for
	vectors, as `slime-length=' was already used with strings in
	`slime-parse.el'. This broke extended arglist display.

2007-09-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-setup): Call the respective init functions of
	contribs.

	* slime-autoloads.el (slime-setup-contribs): Ditto.

2007-09-19  Helmut Eller  <heller@common-lisp.net>

	Simplify slime-compile-file.

	* slime.el (slime-compile-file): Don't save window config.
	(slime-curry, slime-rcurry): New functions.

	* slime.el (slime-complete-symbol*-fancy): Move defcustom to
	contrib/slime-c-p-c.el

	* swank-version.el: Delete file. No longer used.

	* bridge.el: Moved to contrib.

	* tree-widget.el: File deleted. Only needed by contribs and is
	distributed with Emacs 21.

	* slime.el: Reorder some devfars and menus code so that the
	compiler doesn't complain about free variables.

	Fix apropos in Emacs 22.

	* slime.el (slime-print-apropos): Add button props for Emacs 22.